explain grid-gap and fix, not perfect but much better in browser!

--- a/src/components/PhotoList.css
+++ b/src/components/PhotoList.css
@@ -1,7 +1,7 @@
 .photo-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-gap: 15px;
+  grid-gap: 0 15px;
   grid-auto-rows: 15px;
 }
 
@@ -9,7 +9,9 @@
 specific photo */
 /* pixels for grid-auto-rows is chosen arbitrarily, in some cases the white space is too large. should
 possibly make the rows much smaller(10-15px). this provides fine-grade detail that doesn't allocate too
-many rows*/
+many rows */
+/* .photo-list has grid-gap rule that allocates pixels between each cell. now that rows is smaller, the
+grid-gap pixel essentially doubles the amount of white space needed */
 
 .photo-list img {
   width: 250px;
